--- a/_pgbackup/style_1620272832.css
+++ b/_pgbackup/style_1620272832.css
@@ -6,8 +6,9 @@ td {
 }
 
 p {
-    color: #000000;
-    font-size: 32px;
+    color: #999999;
+    font-family: arial, sans-serif;
+    font-size: 16px;
     font-weight: bold;
     margin-top: 0px;
     margin-bottom: 1px;
